--- a/projet.ipynb
+++ b/projet.ipynb
@@ -40,6 +40,43 @@
     "\n",
     "print(missing_values)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Importation des données\n",
+    "data = pd.read_csv('car_insurance.csv')\n",
+    "\n",
+    "# Examen des premières lignes et des informations sur les colonnes\n",
+    "first_rows = data.head()\n",
+    "info = data.info()\n",
+    "description = data.describe()\n",
+    "\n",
+    "# Détection des valeurs manquantes\n",
+    "missing_values = data.isna().sum()\n",
+    "\n",
+    "# Visualisation des distributions des variables numériques\n",
+    "data = data.drop(columns=['id'])\n",
+    "data = data.drop(columns=['outcome'])\n",
+    "data = data.drop(columns=['children'])\n",
+    "data.hist(bins=50, figsize=(20, 15), color='#ddfa12', ec='black')\n",
+    "plt.show()\n",
+    "\n",
+    "first_rows, info, description, missing_values\n",
+    "\n",
+    "print(missing_values)\n"
+   ]
   }
  ],
  "metadata": {
